# iara.client.python

./: .gitignore  README.md  pyproject.toml  requirements.txt
iara_client/: __init__.py  main.py
iara_client/core/repositories/iara/: __init__.py  interface.py
iara_client/core/services/iara/: __init__.py  interface.py
iara_client/core/services/message_validator/: __init__.py
iara_client/core/services/schema_validator/: __init__.py  interface.py
iara_client/domain/enums/schema/: __init__.py  enum.py  options.py  types.py
iara_client/domain/enums/schema/options/: __init__.py  enum.py
iara_client/domain/enums/schema/types/: __init__.py  types.py
iara_client/domain/enums/status/: __init__.py  enum.py
iara_client/domain/enums/topics/: __init__.py  enum.py
iara_client/domain/exceptions/: __init__.py  exception.py
iara_client/domain/schemas/base/: schema.py
iara_client/domain/schemas/caf/: schema.py
iara_client/domain/schemas/cpf_validation/: schema.py
iara_client/domain/schemas/ouroinvest/: schema.py
iara_client/domain/schemas/score_validation/: schema.py
iara_client/domain/schemas/selfie_validation/: schema.py
iara_client/infraestructure/env_config/: __init__.py
iara_client/infraestructure/kafka/: __init__.py  infraestructure.py
iara_client/repositories/iara/: __init__.py  repository.py
iara_client/services/iara/: __init__.py  service.py
iara_client/services/message_validator/: __init__.py  service.py
iara_client/services/schema_validator/: __init__.py  service.py
