[tool.poetry]
name = "iara_client"
version = "0.3.1"
description = "Iara integrations"
authors = ["Marco Sievers de Alemida <msa@lionx.com.br>"]

packages = [
    { include = "iara_client"},
    { include = "iara_client/**/*.py" },
]
[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "^0.7.2"
python-decouple = "^3.4"
nidavellir = "^0.1.0"
pydantic = "^1.9.0"
orjson = "^3.6.7"
etria_logger = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus.sigame.com.br/repository/pypi/simple/"